--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prismjs": "^1.15.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-helmet": "^5.2.0",
     "react-scripts": "2.1.3",
     "react-simple-code-editor": "^0.8.0"
   },
